# cadence4

./: CMakeLists.txt  LICENSE  README.md
include/cadence4/: concept.h  relation.h
